<?xml version="1.0"?>

<package format="3">

  <name>direct_lidar_odometry</name>
  <version>1.4.3</version>
  <description>Direct LiDAR Odometry: Fast Localization with Dense Point Clouds</description>

  <maintainer email="kennyjchen@ucla.edu">Kenny J. Chen</maintainer>
  <maintainer email="btlopez@ucla.edu">Brett T. Lopez</maintainer>

  <author>Kenny J. Chen</author>
  <author>Brett T. Lopez</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>nav_msgs</depend>
  <depend>dlo_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
